Image texture with this specific configuration cause a crash in EEVEE or material preview #74547

Closed
opened 2020-03-08 19:36:51 +01:00 by Guilherme Maia · 9 comments

System Information
Operating system: Windows-10-10.0.17763-SP0 64 Bits
Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 26.20.100.6911

Blender Version
Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: 77d23b0bd7

           and version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 22:46, hash: `rBdcdcc2348842`

Short description of error
When you use an image texture with the projection set to "Box" and then set the Texture Mapping "Texture", via the sidebar menu, Blender / EEVEE crashes

Exact steps for others to reproduce the error
You can do it in any order possible, when all the steps are done blender crashes [Based on the default startup].

1 - In the shader editor, in any material that is in the scene, load any image texture.
2 - Plug it in anyway that it influences the material output node.
3 - Change the Projection type to "Box".
4 - Yet in the shader editor, open the sidebar (hotkey 'n'), go to the Texture Map rollout and change the type to "texture".
5 - Now open the material previw OR set the viewport to EEVEE(material preview or render preview mode).

now Blender should crash... if not, try to change the Box projection's blend value

Some observations:

What cause the crash is the combination of these: Blended Box Projection + Texture Mapping set to Texture + EEVEE.
If you prepare the texture in solid mode/cycles and then change to EEVEE, sometimes it will not crash blender... but if you try to change the blend value it will.
With any vector plugged into the image texture node, it will not crash.

Edit:
Discovered that Material preview also crashes blender with this texture configuration
I believe that when material preview or EEVEE try to render an image with these configuration, it fails and then crashes blender.
My GPU died somedays ago and I'm using Intel Onboard Graphics. I don't know if this occurs with a dedicated GPU or another Onboard GPU

eeveeCrash.blend

**System Information** Operating system: Windows-10-10.0.17763-SP0 64 Bits Graphics card: Intel(R) UHD Graphics 630 Intel 4.5.0 - Build 26.20.100.6911 **Blender Version** Broken: version: 2.82 (sub 7), branch: master, commit date: 2020-02-12 16:20, hash: `77d23b0bd7` ``` and version: 2.83 (sub 6), branch: master, commit date: 2020-03-06 22:46, hash: `rBdcdcc2348842` ``` **Short description of error** When you use an image texture with the projection set to "Box" and then set the Texture Mapping "Texture", via the sidebar menu, Blender / EEVEE crashes **Exact steps for others to reproduce the error** You can do it in any order possible, when all the steps are done blender crashes [Based on the default startup]. 1 - In the shader editor, in any material that is in the scene, load any image texture. 2 - Plug it in anyway that it influences the material output node. 3 - Change the Projection type to "Box". 4 - Yet in the shader editor, open the sidebar (hotkey 'n'), go to the Texture Map rollout and change the type to "texture". 5 - Now open the material previw OR set the viewport to EEVEE(material preview or render preview mode). now Blender should crash... if not, try to change the Box projection's blend value Some observations: What cause the crash is the combination of these: Blended Box Projection + Texture Mapping set to Texture + EEVEE. If you prepare the texture in solid mode/cycles and then change to EEVEE, sometimes it will not crash blender... but if you try to change the blend value it will. With any vector plugged into the image texture node, it will not crash. Edit: Discovered that Material preview also crashes blender with this texture configuration I believe that when material preview or EEVEE try to render an image with these configuration, it fails and then crashes blender. My GPU died somedays ago and I'm using Intel Onboard Graphics. I don't know if this occurs with a dedicated GPU or another Onboard GPU [eeveeCrash.blend](https://archive.blender.org/developer/F8401664/eeveeCrash.blend)
Author

Added subscriber: @Maia3D

Added subscriber: @Maia3D
Member

Added subscriber: @ankitm

Added subscriber: @ankitm
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member
- Please add a simple blend file that demonstrates the issue with some steps. - If setting "viewport shading" to "material", or opening "preview" in "material properties" is causing the crash, there are 3 tasks which report the crash in simpler steps. 2 of them have been closed, intel one remains open. https://developer.blender.org/T74174 https://developer.blender.org/T74206 https://developer.blender.org/T74401 (intel) so please check if this is different.
Guilherme Maia changed title from Image texture with "Blended Box" Projection and "Texture" Texture Mapping in EEVEE crashes blender to Image texture with this specific configuration cause a crash in EEVEE or material preview 2020-03-12 03:16:29 +01:00
Member

Added subscriber: @EAW

Added subscriber: @EAW
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13

72461c09b4


Crashes on Step 4 (set the Texture mapping to "texture" in the side panel) when using --debug --debug-cycles --debug-all --factory-startup

Memoryblock GPUNodeLink: double free

blender_system_info.txt

blender_debug_output.txt


Crash on Step 5 ("open the material preview") when using an MSVC debug build

input->**link** was nullptr. occurred```

```blender.exe!codegen_call_functions(DynStr * ds, GPUNodeGraph * graph, GPUOutput * finaloutput) Line 436
	at C:\blender-git\blender\source\blender\gpu\intern\gpu_codegen.c(436)

{F8401858}

Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 470/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 388.13 72461c09b4 --- Crashes on Step 4 (set the Texture mapping to "texture" in the side panel) when using --debug --debug-cycles --debug-all --factory-startup `Memoryblock GPUNodeLink: double free` [blender_system_info.txt](https://archive.blender.org/developer/F8401824/blender_system_info.txt) [blender_debug_output.txt](https://archive.blender.org/developer/F8401825/blender_debug_output.txt) --- Crash on Step 5 ("open the material preview") when using an MSVC debug build ```Exception thrown: read access violation. input->**link** was nullptr. occurred``` ```blender.exe!codegen_call_functions(DynStr * ds, GPUNodeGraph * graph, GPUOutput * finaloutput) Line 436 at C:\blender-git\blender\source\blender\gpu\intern\gpu_codegen.c(436) ``` {F8401858}

This issue was referenced by 91b334b2f2

This issue was referenced by 91b334b2f2fcd50366da38a71b16aa0512f3779a

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Clément Foucault self-assigned this 2020-03-30 19:58:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#74547
No description provided.