Fix T74547 EEVEE: Image texture crash with use after free

Same fix than for the other mapping types.